--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 11:24:00 AM</p>
+    <p class="lastupdate">09/04/2020 11:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,23 +50,23 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">85.0&#176;F</td>
+        <td class="data">85.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">85.0&#176;F</td>
+        <td class="data">85.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">85.0&#176;F</td>
+        <td class="data">85.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.5&#176;F</td>
+        <td class="data">52.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">32%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph N (0&#176;)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.6&#176;F</td>
+        <td class="data">77.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:23:56 AM">
-            85.0</span><br/>
+          <span title="11:28:44 AM">
+            85.6</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:23:56 AM" class="hival">
-            85.0</span>
+          <span title="11:28:44 AM" class="hival">
+            85.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:36:23 AM">
             83</span><br/>
-          <span title="11:22:32 AM">
-            33</span>
+          <span title="11:28:30 AM">
+            32</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          9
+          10
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:23:02 AM">
-            77.6</span><br/>
+          <span title="11:28:02 AM">
+            77.8</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 20 hours, 37 minutes</td>
+      <td class="data">2 days, 20 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 20 hours, 37 minutes</td>
+      <td class="data">2 days, 20 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
