--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 11:39:00 AM</p>
+    <p class="lastupdate">09/04/2020 11:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.2&#176;F</td>
+        <td class="data">88.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.2&#176;F</td>
+        <td class="data">88.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.2&#176;F</td>
+        <td class="data">88.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.0&#176;F</td>
+        <td class="data">50.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">28%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.929 inHg (-0.035)</td>
+        <td class="data">29.927 inHg (-0.028)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph N (0&#176;)</td>
+        <td class="data">4 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.0&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">44%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:38:08 AM">
-            87.2</span><br/>
+          <span title="11:43:56 AM">
+            88.1</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:38:08 AM" class="hival">
-            87.2</span>
+          <span title="11:43:56 AM" class="hival">
+            88.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:36:23 AM">
             83</span><br/>
-          <span title="11:33:38 AM">
-            29</span>
+          <span title="11:40:28 AM">
+            28</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:05:02 AM">
             29.967</span><br/>
-          <span title="04:12:01 AM">
-            29.928</span>
+          <span title="11:42:02 AM">
+            29.927</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 20 hours, 52 minutes</td>
+      <td class="data">2 days, 20 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 20 hours, 52 minutes</td>
+      <td class="data">2 days, 20 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
