--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/04/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,8 +84,8 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">90.0<br/>
-            <span class="timestamp">11:58:48 AM</span><br/>
+          <td class="data new_row">90.5<br/>
+            <span class="timestamp">12:03:54 PM</span><br/>
             54.9<br/>
             <span class="timestamp">06:35:33 AM</span>
           </td>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">90.0<br/>
-            <span class="timestamp">11:58:48 AM</span>
+          <td class="data new_row">90.5<br/>
+            <span class="timestamp">12:03:54 PM</span>
           </td>
           <td class="data new_row">101.5<br/>
             <span class="timestamp">04:40:23 PM (Thursday)</span>
