--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 12:04:00 PM</p>
+    <p class="lastupdate">09/04/2020 12:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">90.5&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">90.5&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">90.5&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.8&#176;F</td>
+        <td class="data">49.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">25%</td>
+        <td class="data">24%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.927 inHg (-0.032)</td>
+        <td class="data">29.923 inHg (-0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph N (0&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:54 PM">
-            90.5</span><br/>
+          <span title="12:08:42 PM">
+            91.2</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:54 PM" class="hival">
-            90.5</span>
+          <span title="12:08:42 PM" class="hival">
+            91.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:36:23 AM">
             83</span><br/>
-          <span title="11:56:42 AM">
-            25</span>
+          <span title="12:04:24 PM">
+            24</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:05:02 AM">
             29.967</span><br/>
-          <span title="11:57:02 AM">
-            29.923</span>
+          <span title="12:06:02 PM">
+            29.922</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 21 hours, 17 minutes</td>
+      <td class="data">2 days, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 21 hours, 17 minutes</td>
+      <td class="data">2 days, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
