--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 12:39:00 PM</p>
+    <p class="lastupdate">09/04/2020 12:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">93.4&#176;F</td>
+        <td class="data">93.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">93.4&#176;F</td>
+        <td class="data">93.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">93.4&#176;F</td>
+        <td class="data">93.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.8&#176;F</td>
+        <td class="data">47.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">22%</td>
+        <td class="data">21%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.906 inHg (-0.053)</td>
+        <td class="data">29.903 inHg (-0.054)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNE (22&#176;)</td>
+        <td class="data">4 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.6&#176;F</td>
+        <td class="data">77.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:37:44 PM">
-            93.4</span><br/>
+          <span title="12:42:22 PM">
+            93.7</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:37:44 PM" class="hival">
-            93.4</span>
+          <span title="12:42:22 PM" class="hival">
+            93.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -237,7 +237,7 @@
         <td class="data new_row hilo_day">
           <span title="10:05:12 AM">
             56.7</span><br/>
-          <span title="12:24:00 PM">
+          <span title="12:43:40 PM">
             47.8</span>
         </td>
         <td class="data new_row hilo_week">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:36:23 AM">
             83</span><br/>
-          <span title="12:24:00 PM">
-            22</span>
+          <span title="12:43:40 PM">
+            21</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:05:02 AM">
             29.967</span><br/>
-          <span title="12:33:02 PM">
-            29.906</span>
+          <span title="12:42:02 PM">
+            29.903</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          10
+          9
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 21 hours, 52 minutes</td>
+      <td class="data">2 days, 21 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 21 hours, 52 minutes</td>
+      <td class="data">2 days, 21 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
